k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudsentinel
  labels:
    name: cloudsentinel
    environment: base
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
